--- a/configuration.properties
+++ b/configuration.properties
@@ -1,1 +1,114 @@
 URL=https://spendinggood.com/
+browser=chrome
+
+
+#
+
+
+
+
+
+
+
+
+
+#HAVA
+
+
+
+
+
+
+
+
+
+
+#FATIH
+
+
+
+
+
+
+
+
+
+
+#DAVUT
+
+
+
+
+
+
+
+
+
+
+#HALIT
+
+
+
+
+
+
+
+
+
+
+#HACER
+
+
+
+
+
+
+
+
+
+
+#OZLEM
+
+
+
+
+
+
+
+
+
+
+#SILA
+
+
+
+
+
+
+
+
+
+
+#HAMIT
+
+
+
+
+
+
+
+
+
+
+#SEHRI
+
+
+
+
+
+
+
+
+
+
+
