--- a/configuration.properties
+++ b/configuration.properties
@@ -25,6 +25,19 @@ browser=chrome
 
 #FATIH
 
+ilkUrun=900
+ikinciUrun=kitap
+email=spendinggood@hotmail.com
+sifre=@spending2023
+firstname=FATIH
+surname=KASIKCI
+companyname=GOODSPENDING
+street=75.street
+unit=lale
+postcode = CT1 2FY
+city=Manchester
+phone=07723475564
+
 
 
 
