--- a/configuration.properties
+++ b/configuration.properties
@@ -114,7 +114,16 @@ vendor-password=19811977
 
 
 #SEHRI
-
+sehri_email= sehrigokcan@gmail.com
+sehri_password=Nemo5775.
+sehri_firstname=Sehri
+sehri_lastname=Gokcan
+sehri_country=Gibraltar
+sehri_street=Ersel
+sehri_postcode=55131
+sehri_town=Wintelre
+sehri_state=Berlin
+sehri_phone=654987685
 
 
 
