--- a/configuration.properties
+++ b/configuration.properties
@@ -92,16 +92,17 @@ phone=07723475564
 
 
 #SILA
-
-
-
-
-
-
-
-
-
-
+app_url=https://spendinggood.com/
+username=Reha
+password=Balikesir09
+urun=apple
+first_name=Reha
+last_name=Saritepeci
+street_adresss=Einkaufsstraße
+post_code=50667
+cityy=Köln
+phonee=4911222558866
+cupon_cod=reha10
 #HAMIT
 
 
