--- a/configuration.properties
+++ b/configuration.properties
@@ -59,16 +59,16 @@ phone=07723475564
 
 
 #HALIT
-
-
-
-
-
-
-
-
-
-
+halit_email=spendinggood_1234@outlook.com
+halit_sifre=741852963.T
+halit_firstname=Para
+halit_lastname=Setemol
+halit_country=Albania
+halit_Streetadress=takatuka 34
+halit_Towncity=Manhatten
+halit_State=NewYork
+halit_Zipcode=55555
+halit_Phone=123456789
 #HACER
 
 vendor-email=hh_zeran@hotmail.com
