--- a/configuration.properties
+++ b/configuration.properties
@@ -84,8 +84,9 @@ vendor-password=19811977
 
 
 #OZLEM
-
-
+site_url=https://spendinggood.com/
+email_ozlem=lzmra2021@gmail.com
+password_ozlem=maria123@
 
 
 
