--- a/configuration.properties
+++ b/configuration.properties
@@ -64,9 +64,9 @@ indirimKuponu=indirim
 #HALIT
 halit_email=spendinggood_1234@outlook.com
 halit_sifre=741852963.T
-halit_firstname=Para
+halit_firstname=Parama
 halit_lastname=Setemol
-halit_country=Albania
+halit_country=Germany
 halit_Streetadress=takatuka 34
 halit_Towncity=Manhatten
 halit_State=NewYork
