--- a/configuration.properties
+++ b/configuration.properties
@@ -86,7 +86,7 @@ vendor-password=19811977
 #OZLEM
 site_url=https://spendinggood.com/
 email_ozlem=lzmra2021@gmail.com
-password_ozlem=maria123@
+password_ozlem=gloria123@
 
 
 
