--- a/configuration.properties
+++ b/configuration.properties
@@ -15,7 +15,7 @@ browser=chrome
 #HAVA
 emailhava=jainil.conway@foundtoo.com
 passwordhava=12345Hava
-SKU=complica8596
+SKU=complica
 StockQty=50
 ProductTitle=LAMPARAS OTOMANOS
 Price($)=80.00
