--- a/configuration.properties
+++ b/configuration.properties
@@ -51,8 +51,8 @@ indirimKuponu=indirim
 
 
 #DAVUT
-
-
+ShortDescription1= nike ayakkabi
+Description1= rahat ve kullanisli bir ayakkabi
 
 
 
@@ -71,7 +71,7 @@ halit_Streetadress=takatuka 34
 halit_Towncity=Manhatten
 halit_State=NewYork
 halit_Zipcode=55555
-halit_Phone=123456789
+ayakkabi_=ayakkabi
 #HACER
 
 vendor-email=hh_zeran@hotmail.com
